[metadata]
name = qolsys_client
version = 0.0.1
author = Zachary McGibbon
author_email = zachary.mcgibbon@gmail.com
description = A client for Qolsys alarm panels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mzac/qolsys-client
project_urls =
    Bug Tracker = https://github.com/mzac/qolsys-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6